update actions/checkout branch

--- a/.github/workflows/votes.yml
+++ b/.github/workflows/votes.yml
@@ -8,7 +8,7 @@ jobs:
   _:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@main
     - name: get votes
       uses: ailin-nemui/irssi-script-votes/list-irssi-scripts-votes@script
       env:
